--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     mongodb:
       uri: ${MONGODB_URI}
       auto-index-creation: true
+      database: pitshop_mechanix
 
   servlet:
     multipart:
@@ -35,7 +36,7 @@ jwt:
 
 # CORS Configuration
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:*}
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS
   allowed-headers: "*"
   allow-credentials: true
@@ -43,7 +44,7 @@ cors:
 # WebSocket Configuration
 websocket:
   endpoint: /ws
-  allowed-origins: ${CORS_ALLOWED_ORIGINS}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:*}
 
 # Geospatial Configuration
 geospatial:
