feat: Implement user authentication with email/password and Firebase, and initialize the frontend application with core UI components and routing.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -107,6 +107,13 @@
             <version>4.11.0</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Firebase Admin SDK -->
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>9.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
